<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.jalal.jetpack.moviecatalogue.ui.tvshowdetail.TvShowDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="144dp"
            android:layout_height="223dp"
            android:layout_marginEnd="84dp"
            android:contentDescription="@string/poster_description"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:background="@drawable/toggle_selector"
            app:layout_constraintBottom_toBottomOf="@+id/tv_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_score"
            app:layout_constraintTop_toBottomOf="@+id/score" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_photo"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/title_tvshow"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toTopOf="@+id/img_photo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/score"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/score"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/score"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/score" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_score"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/status"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_score" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/status"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/status" />

        <TextView
            android:id="@+id/first_air_date"
            android:layout_width="211dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/first_air_date"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_status" />

        <TextView
            android:id="@+id/tv_first_air_date"
            android:layout_width="214dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/first_air_date"
            android:textColor="@color/text"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/first_air_date" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_photo"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_photo" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
