...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/status" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_status"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_photo"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_status" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/release_date"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/img_photo"
...
